--- a/DB/[엘리] 트랜잭션.md
+++ b/DB/[엘리] 트랜잭션.md
@@ -65,7 +65,7 @@ MyISAM -(대체)→ InnoDB
     
 
 ### 5. 트랜잭션의 상태
-![Transaction_state](./transaction_state.png)
+![image](https://velog.velcdn.com/images/rik963/post/ecc22779-fff5-4999-9c86-5a09ced27132/image.png)
 
 - Active
     
