--- a/OS/캐시와 지역성.md
+++ b/OS/캐시와 지역성.md
@@ -20,11 +20,8 @@
 - 캐시메모리를 사용하면 주 기억장치를 접근하는 횟수가 줄어들어 컴퓨터의 처리속도가 향상
 - 캐시의 크기는 보통 수십 KByte ~ 수백 KByte
  
-
-
-# 동적 CPU 메모리 캐시 그림
  
-#### 캐시(Cache)의 지역성(Locality)
+# 캐시(Cache)의 지역성(Locality)
 - 캐시가 효율적으로 동작하려면, 캐시의 적중율(Hit-rate)를 극대화 시켜야 한다.
 - 캐시에 저장할 데이터가 지역성(Locality)을 가져야 한다.
 - #### 지역성이란, 데이터 접근이 시간적, 혹은 공간적으로 가깝게 일어나는 것을 의미한다.
@@ -33,7 +30,7 @@
     - 기억장치 내의 정보를 균일하게 Access하는 것이 아닌 어느 한 순간에 특정 부분을 집중적으로 참조하는 특성이다.
  
 
-# 지역성(Locality)의 종류
+## 지역성(Locality)의 종류
 
 #### 시간적 지역성
 - 특정 데이터가 한번 접근되었을 경우, 가까운 미래에 또 한번 데이터에 접근할 가능성이 높은 것
