--- a/OS/캐시와 지역성.md
+++ b/OS/캐시와 지역성.md
@@ -20,7 +20,7 @@
 - 캐시메모리를 사용하면 주 기억장치를 접근하는 횟수가 줄어들어 컴퓨터의 처리속도가 향상
 - 캐시의 크기는 보통 수십 KByte ~ 수백 KByte
 
- ![동적 CPU 메모리 할당](https://drive.google.com/file/d/1GPZkLsQe_nN16ONom3jOmk6AkvY3qrUr/view?usp=share_link)
+ ![img](https://drive.google.com/file/d/1GPZkLsQe_nN16ONom3jOmk6AkvY3qrUr/view?usp=share_link)
  
 # 캐시(Cache)의 지역성(Locality)
 - 캐시가 효율적으로 동작하려면, 캐시의 적중율(Hit-rate)를 극대화 시켜야 한다.
