[폴] (재)캐시 지역성

--- a/OS/캐시와 지역성.md
+++ b/OS/캐시와 지역성.md
@@ -57,4 +57,5 @@
     - 직접 매핑 방식의 단점을 보완한 방식.
     - 모든 태그들을 병렬로 검사하기 때문에 복잡하고 비용이 높다는 단점이 있어 거의 사용하지 않는다.
 - #### 세트-어소시에이티브 매핑(Set-Associative Mapping)
-    - 직접 매핑과 연관 매핑의 장점만을 취한 방식.
+    - 직접 매핑과 연관 매핑의 장점만을 취한 방식!
+    - 주 기억장치의 일정 블록을 캐시의 일정 부분과 연관지어 캐싱한다. 
