docs : 생성자, this, this()

--- a/Java/생성자.md
+++ b/Java/생성자.md
@@ -1,1 +1,171 @@
-## 생성자
+# 생성자
+
+생성자는 인스턴스가 생성될 떄 호출되는 ```인스턴스 초기화 메서드```이다
+
+``` 
+Note :
+
+여기서 말하는 초기화는 Reset이 아님!
+또한 초기화는 객체를 생성하는 작업이 아니고, 객체안에 필요한 값이 다 연결되어있고 처음 제대로 일을 시작하는것 (by 영한)
+```
+
+### 생성자의 조건
+
+```java
+클래스이름(타입 변수명, 타입 변수명, ...) {
+    // 인스턴스 생성시 수행될 코드
+    // 주로 인스턴스 변수의 초기화 코드를 적는다.
+}
+```
+* 생성자의 이름은 ```클래스의 이름과 같아야 한다```
+* 생성자는 ```리턴값이 없다```
+
+  * 생성자도 메서드이기 때문에 리턴값이 없다는 표시인 void를 붙여야하나, 모든 생성자가 리턴값이 없으므로 생략 가능하게 함
+
+```java
+class Card{
+    Card() { // 매개변수가 없는 생성자
+        ...
+    }
+    
+    Card(String k, int num) { // 매개변수가 있는 생성자
+        ...
+    }
+}
+```
+
+* 연산자 new가 인스턴스를 생성하는 것이지 생성자가 인스턴스를 생성하는 것이 아니다!
+* 생성자는 단순히 인스턴스변수들의 초기화에 사용되는 메서드일 뿐!
+
+### 수행 과정
+
+```
+Card card = new Card();
+```
+
+* 연산자 new 에 의해 메모리(heap)에 Card 클래스의 인스턴스가 생성
+* ⇀ 생성자 Card()가 호출되어 수행
+* ⇀ 연산자 new의 결과로 생성된 Card 인스턴스의 주소가 반환되어 참조변수 card에 저장
+
+## 기본 생성자
+
+컴파일러는 기본 생성자를 자동적으로 추가해주나, ```클래스에 정의된 생성자가 하나도 없을 때``` 뿐이다
+
+``` java
+class Data1 {
+    int value;
+}
+
+class Data2 {
+    int value;
+    
+    Data2(int x) {
+        value = x;
+    }
+}
+
+class ConstructorTest {
+    public static void main(String[] arg) {
+        Data1 d1 = new Data1();
+        Data2 d2 = new Data2(); //컴파일 에러 발생
+    }
+}
+```
+
+* Data2에는 이미 생성자 Data2(int x)가 정의되어 있으므로 기본 생성자가 추가되지 않았기 때문에 컴파일 에러 발생
+* 컴파일러가 자동적으로 기본 생성자를 추가해주는 경우는 ```클래스 내에 생성자가 하나도 없을 때```
+
+## 생성자에서 다른 생성자 호출하기 - this()
+
+같은 클래스의 멤버들 간에 서로 호출이 가능하듯, 생성자 간에도 서로 호출이 가능하다!
+
+### 조건
+* 생성자의 이름으로 클래스 이름 대신 this를 사용
+* 한 생성자에서 다른 생성자를 호출할 때는 반드시 ```첫 줄```에서만 호출이 가능
+
+  * 생성자 내에서 초기화 작업도중에 다른 생성자를 호출하게 되면 호출된 다른 생성자 내에서도 멤버변수들의 값을 초기화할 것이기 때문!  
+
+```java
+Car() {
+    // Car("white", "auto", 4); 이렇게 불가능
+    this("white", "auto", 4);
+}
+
+Car(String color) {
+    this(color, "auto", 4);
+}
+
+Car(String color, String gearType, int door) {
+    this.color = color
+    this.gearType = gearType;
+    this.door = door;
+    
+    //this.color : 인스턴스 변수
+    //color : 생성자의 매개변수로 정의된 변수
+}
+```
+
+## 인스턴스 변수에 접근하기 - this
+
+```java
+Car(String c, String g, int d) {
+    color = c;
+    gearType = g;
+    coor = d;
+}
+
+Car(String color, String gearType, int door) {
+    this.color = color
+    this.gearType = gearType;
+    this.door = door;
+}
+```
+
+* ```color = c```는 생성자의 매개변수로 선언된 지역벼수 c의 값을 인스턴스 변수 color에 저장하는 것
+* 하지만 ```color = color```처럼 생성자의 매개변수로 선언된 변수의 이름과 인스턴스변수 color와 동일한 경우에는 구분이 안감
+
+  * 이럴 때 this를 붙여주자! 
+  * 생성자의 매개변수로 인스턴스 변수들의 초기값을 제공받는 경우가 많으므로 매개변수와 인스턴스변수 이름이 일치하는 경우가 많음
+  * 그럴때 위의 코드처럼 매개변수이름을 다르게하는 것보다 this를 사용하여 구분하는 것이 더 명확하다
+* ```this```는 자기자신을 가리키는 참조변수로, 인스턴스 주소가 저장되어 있음
+
+* this를 통해 인스턴스 변수에 접근 가능
+  
+  * 참조변수를 통해 인스턴스의 멤버에 접근할 수 있는 것 처럼 this를 통해 인스턴스변수에 접근할 수 있음
+* this를 사용할 수 있는 것은 인스턴스 멤버 뿐
+
+  * static 메서드에서는 this를 사용할 수 없음. static은 인스턴스 생성 없이 호출될 수 있기 때문에 static 메서드가 호출된 시점에 인스턴스가 존재하지 않을 수 있기 때문   
+
+## 생성자를 이용한 인스턴스의 복사
+
+현재 사용하고 있는 인스턴스와 같은 상태를 갖는 인스턴스를 하나 더 만들고자 할 때 생성자를 이용할 수 있음!
+
+```java
+Car() {
+    this("white", "auto", 4);
+}
+
+Car(Car c) { //인스턴스 복사를 위한 생성자
+    this(c.color, c.gearType, c.door);
+}
+
+Car(String color, String gearType, int door) {
+    this.color = color
+    this.gearType = gearType;
+    this.door = door;
+}
+
+class CarTest {
+    public static void main(String[] args) {
+        Car c1 = new Car();
+        Car c2 = new Car(c1); //c1의 복사본 c2를 생성
+        c1.door = 100; // c1의 인스턴스 변수 coor의 값을 변환
+        System.out.println(c1.door); // 100
+        System.out.println(c2.door); // 4
+    }
+}
+```
+* 인스턴스 c2는 c1을 복사하여 생성된 것이므로 서로 같은 상태를 가지나 서로 독립적인 메모리공간에 존재하는 별도의 인스턴스
+* 그러므로 c1의 값이 바뀌어도 c2는 영향을 받지 X
+
+
