--- a/Java/예외처리1.md
+++ b/Java/예외처리1.md
@@ -6,9 +6,9 @@
 - Runtime Error: 프로그램이 작동하는 도중에 발생하는 에러(그나마 나은 에러...)
 - Logical Error: 프로그램이 잘 작동하는데 의도와는 다르게 작동하는 에러(답도 없는 에러...)
 
-![Num1] (https://drive.google.com/file/d/13DNv9FDUJAeEFrBOquWL2DqtRBxfPfdf/view?usp=sharing)
+![Num1](http://drive.google.com/uc?export=view&id=13DNv9FDUJAeEFrBOquWL2DqtRBxfPfdf/view)
 
-![Num2] (https://drive.google.com/file/d/1MUoA2nhgOMQZOSKzLxOAQ0VzUlbYSbEe/view?usp=sharing)
+![Num2](https://drive.google.com/file/d/1MUoA2nhgOMQZOSKzLxOAQ0VzUlbYSbEe/view?usp=sharing)
 
 - 예외 클래스는 그림과 같이 Runtime Exception과 나머지 Exception으로 분리하여 숙지하면 좋다.
 Runtime Exception의 경우 주로 프로그래머의 실수에 의해서 발생될 수 있는 예외들이며, 자바의 기본적인 용도에 오류가 있을 때 주로 발생한다. ex) 배열의 범위 초과(ArrayIndexOutOfBoundsException)
