--- a/Java/예외처리1.md
+++ b/Java/예외처리1.md
@@ -6,7 +6,7 @@
 - Runtime Error: 프로그램이 작동하는 도중에 발생하는 에러(그나마 나은 에러...)
 - Logical Error: 프로그램이 잘 작동하는데 의도와는 다르게 작동하는 에러(답도 없는 에러...)
 
-![Num1](http://drive.google.com/uc?export=view&id=13DNv9FDUJAeEFrBOquWL2DqtRBxfPfdf/view)
+![Num1](https://drive.google.com/file/d/13DNv9FDUJAeEFrBOquWL2DqtRBxfPfdf/view)
 
 ![Num2](https://drive.google.com/file/d/1MUoA2nhgOMQZOSKzLxOAQ0VzUlbYSbEe/view?usp=sharing)
 
