--- a/Java/예외처리1.md
+++ b/Java/예외처리1.md
@@ -7,7 +7,7 @@
 - Logical Error: 프로그램이 잘 작동하는데 의도와는 다르게 작동하는 에러(답도 없는 에러...)
 
 ![Num1](https://drive.google.com/file/d/13DNv9FDUJAeEFrBOquWL2DqtRBxfPfdf/view)
-<img src='[http://drive.google.com/uc?export=view&id=13DNv9FDUJAeEFrBOquWL2DqtRBxfPfdf/view](https://drive.google.com/file/d/13DNv9FDUJAeEFrBOquWL2DqtRBxfPfdf/view)' /><br>
+<img src='https://drive.google.com/file/d/13DNv9FDUJAeEFrBOquWL2DqtRBxfPfdf/view' /><br>
 
 ![Num2](https://drive.google.com/file/d/1MUoA2nhgOMQZOSKzLxOAQ0VzUlbYSbEe/view?usp=sharing)
 
